kubernetes/external/kube-prometheus-stack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 32323
  selector:
    app.kubernetes.io/name: grafana
